--- a/BoredApp/src/main/resources/application.properties
+++ b/BoredApp/src/main/resources/application.properties
@@ -1,22 +1,9 @@
-debug =true
-spring.datasource.url=jdbc:mysql://localhost:3306/se452
-spring.datasource.username=root
-spring.datasource.password=valencia25
+#spring.profiles.active=dev
+spring.profiles.active=prod
 
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
-
-spring.sql.init.schema-locations=schema.sql
-spring.sql.init.platform=mysql
-
-
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+spring.jpa.show-ddl=true
 
 
 
-
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-
-logging.level.org.hibernate.sql=DEBUG
