--- a/BoredApp/build.gradle
+++ b/BoredApp/build.gradle
@@ -26,13 +26,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	compile 'org.webjars:bootstrap'
-	compile 'org.hibernate:hibernate-core:5.6.0.Final'
+
+	
 	
 	
 }
